--- a/index.html
+++ b/index.html
@@ -28,6 +28,33 @@
             color: rgb(255, 0, 212);
             text-decoration: underline;
         }
+        .header{
+            background-color: yellowgreen;
+            display: flex;
+            align-items: center;
+            padding: 60px 100px;
+            justify-content: space-between;
+        }
+        img{
+
+            width: 50%;
+            height: 500px;
+        }
+        .text-section{
+            width: 50%;
+            padding: 0 150px;
+        }
+        .p1{
+            text-align: center;
+            font-size: 22px;
+            color: rgb(45, 59, 56);
+        }
+        h6{
+            text-align: center;
+            font-size: 16px;
+            margin-top: 20px;
+            color: rgb(36, 29, 29);
+        }
     </style>
 </head>
 <body>
@@ -39,5 +66,12 @@
             <li>Contact me</li>
         </ul>
     </nav>
+    <div class="header">
+        <img src="/man.jpg" alt="">
+        <div class="text-section">
+            <p class="p1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus iusto veritatis harum quos nemo commodi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex sapiente mollitia nostrum corporis saepe eveniet quisquam soluta dolor fuga amet!</p>
+            <h6>Image from anywhere</h6>
+        </div>
+    </div>
 </body>
 </html>
