dev section created

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
             margin: 0;
             /* font-family: sans-serif; */
         }
+        body{
+            background-color: rgb(55, 3, 185);
+        }
         nav{
             background-color: rgb(55, 3, 185);
             display: flex;
@@ -55,6 +58,20 @@
             margin-top: 20px;
             color: rgb(36, 29, 29);
         }
+        .dev-section{
+            margin: 100px auto;
+            width: 30%;
+            color: white;
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+        }
+        button{
+            height: 40px;
+            width: 120px;
+            background-color: yellow;
+            font-weight: 600;
+        }
     </style>
 </head>
 <body>
@@ -72,6 +89,12 @@
             <p class="p1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus iusto veritatis harum quos nemo commodi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex sapiente mollitia nostrum corporis saepe eveniet quisquam soluta dolor fuga amet!</p>
             <h6>Image from anywhere</h6>
         </div>
+    </div>
+    <div class="dev-section">
+        <h1>Development</h1>
+        <h3>Development is very importend</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, excepturi quaerat. Hic veniam cupiditate natus cum voluptates voluptatem repudiandae perferendis nesciunt, fuga, quod harum nisi delectus porro iste a odit.</p>
+        <button>Lern more</button>
     </div>
 </body>
 </html>
