gallary section created

--- a/index.html
+++ b/index.html
@@ -72,6 +72,17 @@
             background-color: yellow;
             font-weight: 600;
         }
+        .img-container{
+            display: flex;
+            gap: 10px;
+            width: 70%;
+            margin: 20px auto;
+        }
+        .img-container img{
+            margin: auto;
+            width: 32%;
+            height: 300px;
+        }
     </style>
 </head>
 <body>
@@ -95,6 +106,23 @@
         <h3>Development is very importend</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, excepturi quaerat. Hic veniam cupiditate natus cum voluptates voluptatem repudiandae perferendis nesciunt, fuga, quod harum nisi delectus porro iste a odit.</p>
         <button>Lern more</button>
+    </div>
+    <div>
+        <div class="img-container">
+            <img src="/download (1).jpeg" alt="">
+            <img src="/download (2).jpeg" alt="">
+            <img src="/download (3).jpeg" alt="">
+        </div>
+        <div class="img-container">
+            <img src="/download (4).jpeg" alt="">
+            <img src="/download (5).jpeg" alt="">
+            <img src="/download (6).jpeg" alt="">
+        </div>
+        <div class="img-container">
+            <img src="/download (7).jpeg" alt="">
+            <img src="/download (8).jpeg" alt="">
+            <img src="/download.jpeg" alt="">
+        </div>
     </div>
 </body>
 </html>
