img-from section created

--- a/index.html
+++ b/index.html
@@ -1,128 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
     <style>
-        *{
-            padding: 0;
-            margin: 0;
-            /* font-family: sans-serif; */
-        }
-        body{
-            background-color: rgb(55, 3, 185);
-        }
-        nav{
-            background-color: rgb(55, 3, 185);
-            display: flex;
-            color: white;
-            align-items: center;
-            justify-content: space-between;
-            padding: 20px 40px;
-        }
-        ul{
-            display: flex;
-            gap: 40px;
-            list-style: none;
-            font-weight: 600;
-        }
-        li:hover{
-            color: rgb(255, 0, 212);
-            text-decoration: underline;
-        }
-        .header{
-            background-color: yellowgreen;
-            display: flex;
-            align-items: center;
-            padding: 60px 100px;
-            justify-content: space-between;
-        }
-        img{
-
-            width: 50%;
-            height: 500px;
-        }
-        .text-section{
-            width: 50%;
-            padding: 0 150px;
-        }
-        .p1{
-            text-align: center;
-            font-size: 22px;
-            color: rgb(45, 59, 56);
-        }
-        h6{
-            text-align: center;
-            font-size: 16px;
-            margin-top: 20px;
-            color: rgb(36, 29, 29);
-        }
-        .dev-section{
-            margin: 100px auto;
-            width: 30%;
-            color: white;
-            display: flex;
-            flex-direction: column;
-            gap: 12px;
-        }
-        button{
-            height: 40px;
-            width: 120px;
-            background-color: yellow;
-            font-weight: 600;
-        }
-        .img-container{
-            display: flex;
-            gap: 10px;
-            width: 70%;
-            margin: 20px auto;
-        }
-        .img-container img{
-            margin: auto;
-            width: 32%;
-            height: 300px;
-        }
+      * {
+        padding: 0;
+        margin: 0;
+        /* font-family: sans-serif; */
+      }
+      body {
+        background-color: rgb(55, 3, 185);
+      }
+      nav {
+        background-color: rgb(55, 3, 185);
+        display: flex;
+        color: white;
+        align-items: center;
+        justify-content: space-between;
+        padding: 20px 40px;
+      }
+      ul {
+        display: flex;
+        gap: 40px;
+        list-style: none;
+        font-weight: 600;
+      }
+      li:hover {
+        color: rgb(255, 0, 212);
+        text-decoration: underline;
+      }
+      .header {
+        background-color: yellowgreen;
+        display: flex;
+        align-items: center;
+        padding: 60px 100px;
+        justify-content: space-between;
+      }
+      img {
+        width: 50%;
+        height: 500px;
+      }
+      .text-section {
+        width: 50%;
+        padding: 0 150px;
+      }
+      .p1 {
+        text-align: center;
+        font-size: 22px;
+        color: rgb(45, 59, 56);
+      }
+      h6 {
+        text-align: center;
+        font-size: 16px;
+        margin-top: 20px;
+        color: rgb(36, 29, 29);
+      }
+      .dev-section {
+        margin: 100px auto;
+        width: 30%;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+      }
+      button {
+        height: 40px;
+        width: 120px;
+        background-color: yellow;
+        font-weight: 600;
+      }
+      .img-container {
+        display: flex;
+        gap: 10px;
+        width: 70%;
+        margin: 20px auto;
+      }
+      .img-container img {
+        margin: auto;
+        width: 32%;
+        height: 300px;
+      }
+      .img-from{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 30px;
+        gap: 10px;
+        color: white;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <nav>
-        <h1>Logo</h1>
-        <ul>
-            <li>Home</li>
-            <li>About me</li>
-            <li>Contact me</li>
-        </ul>
+      <h1>Logo</h1>
+      <ul>
+        <li>Home</li>
+        <li>About me</li>
+        <li>Contact me</li>
+      </ul>
     </nav>
     <div class="header">
-        <img src="/man.jpg" alt="">
-        <div class="text-section">
-            <p class="p1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus iusto veritatis harum quos nemo commodi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex sapiente mollitia nostrum corporis saepe eveniet quisquam soluta dolor fuga amet!</p>
-            <h6>Image from anywhere</h6>
-        </div>
+      <img src="/man.jpg" alt="" />
+      <div class="text-section">
+        <p class="p1">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus
+          iusto veritatis harum quos nemo commodi. Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Ex sapiente mollitia nostrum corporis
+          saepe eveniet quisquam soluta dolor fuga amet!
+        </p>
+        <h6>Image from anywhere</h6>
+      </div>
     </div>
     <div class="dev-section">
-        <h1>Development</h1>
-        <h3>Development is very importend</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, excepturi quaerat. Hic veniam cupiditate natus cum voluptates voluptatem repudiandae perferendis nesciunt, fuga, quod harum nisi delectus porro iste a odit.</p>
-        <button>Lern more</button>
+      <h1>Development</h1>
+      <h3>Development is very importend</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
+        excepturi quaerat. Hic veniam cupiditate natus cum voluptates voluptatem
+        repudiandae perferendis nesciunt, fuga, quod harum nisi delectus porro
+        iste a odit.
+      </p>
+      <button>Lern more</button>
     </div>
     <div>
-        <div class="img-container">
-            <img src="/download (1).jpeg" alt="">
-            <img src="/download (2).jpeg" alt="">
-            <img src="/download (3).jpeg" alt="">
-        </div>
-        <div class="img-container">
-            <img src="/download (4).jpeg" alt="">
-            <img src="/download (5).jpeg" alt="">
-            <img src="/download (6).jpeg" alt="">
-        </div>
-        <div class="img-container">
-            <img src="/download (7).jpeg" alt="">
-            <img src="/download (8).jpeg" alt="">
-            <img src="/download.jpeg" alt="">
-        </div>
+      <div class="img-container">
+        <img src="/download (1).jpeg" alt="" />
+        <img src="/download (2).jpeg" alt="" />
+        <img src="/download (3).jpeg" alt="" />
+      </div>
+      <div class="img-container">
+        <img src="/download (4).jpeg" alt="" />
+        <img src="/download (5).jpeg" alt="" />
+        <img src="/download (6).jpeg" alt="" />
+      </div>
+      <div class="img-container">
+        <img src="/download (7).jpeg" alt="" />
+        <img src="/download (8).jpeg" alt="" />
+        <img src="/download.jpeg" alt="" />
+      </div>
     </div>
-</body>
+    <div class="img-from">
+        <h5>Image from Google</h5>
+        <button>LERN MORE</button>
+    </div>
+  </body>
 </html>
