--- a/index.html
+++ b/index.html
@@ -91,6 +91,39 @@
         gap: 10px;
         color: white;
       }
+      .contact{
+        background-color: yellowgreen;
+        padding: 100px;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        gap: 20px;
+      }
+      form{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        width: 50%;
+        padding: 0 150px;
+      }
+      input{
+        padding: 6px 10px;
+        background-color: transparent;
+        border: none;
+        border-bottom: 2px solid rgb(42, 40, 40);
+        outline: none;
+      }
+      textarea{
+        padding: 6px 10px;
+        background-color: transparent;
+        border: none;
+        border-bottom: 2px solid rgb(42, 40, 40);
+        outline: none;
+        height: 50px;
+      }
+      .contact-text{
+        width: 50%;
+      }
     </style>
   </head>
   <body>
@@ -145,6 +178,19 @@
     <div class="img-from">
         <h5>Image from Google</h5>
         <button>LERN MORE</button>
+    </div>
+    <div class="contact">
+        <form action="">
+            <input type="text" placeholder="Enter your name">
+            <input type="email" placeholder="Enter a valid email address">
+            <textarea name="" id=""></textarea>
+            <button>SUBMIT</button>
+        </form>
+        <div class="contact-text">
+            <h1>CONTACT US</h1>
+            <h3>+8805634756767</h3>
+            <h3>+8806748674586</h3>
+        </div>
     </div>
   </body>
 </html>
