landing page done

--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@
         width: 50%;
         color: rgb(29, 27, 27);
       }
+      .footer{
+        padding: 50px;
+        width: 30%;
+        margin: auto;
+        color: rgb(212, 207, 207);
+        text-align: center;
+      }
     </style>
   </head>
   <body>
@@ -208,6 +215,9 @@
         <h3 style="margin: 50px 0 8px 0">+8805634756767</h3>
         <h3>+8806748674586</h3>
       </div>
+    </div>
+    <div class="footer">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem corrupti laudantium doloremque?</p>
     </div>
   </body>
 </html>
